@@ -1,9 +1,10 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
-% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml_mlc.R, R/paml_rst.R
+% Please edit documentation in R/AllGenerics.R, R/beast.R, R/codeml.R, R/codeml_mlc.R, R/paml_rst.R
 \docType{methods}
 \name{get.tree}
 \alias{get.tree}
 \alias{get.tree,beast}
+\alias{get.tree,codeml-method}
 \alias{get.tree,codeml_mlc-method}
 \alias{get.tree,paml_rst-method}
 \title{get.tree method}
@@ -11,6 +12,8 @@
 get.tree(object, ...)
 
 get.tree(object, ...)
+
+\S4method{get.tree}{codeml}(object, by = "rst", ...)
 
 \S4method{get.tree}{codeml_mlc}(object, ...)
 
@@ -20,6 +23,8 @@ get.tree(object, ...)
 \item{object}{one of \code{jplace}, \code{beast} object}
 
 \item{...}{additional parameter}
+
+\item{by}{one of rst or mlc}
 }
 \value{
 phylo object
