@@ -1,5 +1,6 @@
 CHANGES IN VERSION 0.99.4
 ------------------------
+ o plot method for beast class and get.tree method for codeml class <2014-12-31, Wed>
  o show, get.fields, get.subs and plot methods for codeml class <2014-12-30, Tue>
  o plot method for paml_rst class <2014-12-30, Tue>
  o get.subs, method for paml_rst class <2014-12-30, Tue>
